--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -18,13 +18,25 @@ source("00-paths.R")
 # Load data 
 
 ```{r}
-tsize.files <- list.files(file.path(paths$box, 'data'), pattern = "AOT", full.names = T)
-tsize.files <- c(tsize.files[3:10], tsize.files[1])
+#tsize.files <- list.files(file.path(paths$box, 'data'), pattern = "AOT", full.names = T)
+#tsize.files <- c(tsize.files[3:10], tsize.files[1])
+#tsize.file.2 <- unlist(lapply(tsize.files, function(x) list.files(x, pattern = "_size")))
+
+#tsize.raw <- lapply(1:9, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
+
+#inject.dates <- read_excel(file.path(paths$box, "data", "mimic_injection_dates.xlsx"))
+
+```
+
+```{r AP Data Read Test Code}
+tsize.files <- list.files(file.path(paths$git, 'data','tumor-size'), pattern = "AOT", full.names = T)
+# tsize.files <- c(tsize.files[3:10], tsize.files[1])
 tsize.file.2 <- unlist(lapply(tsize.files, function(x) list.files(x, pattern = "_size")))
 
-tsize.raw <- lapply(1:9, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
+tsize.raw <- lapply(1:10, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
 
 inject.dates <- read_excel(file.path(paths$box, "data", "mimic_injection_dates.xlsx"))
+
 ```
 
 # Functions
@@ -194,6 +206,29 @@ mim4 <- mim4.fixdate %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
 
 ```
+
+```{r AP mimic-10 cleanup}
+mim10 <- tsize.raw[[10]] %>%
+  drop_na(`tumor.number`) %>%
+  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+         `date` = as.character(`date`),
+         Treatment = ifelse(cage %in% c(1,2), "Anti-PD1","IgG"),
+         microbiome.sample = ifelse(cage %in% c(1,3), "HONC-60 68v1", "HONC-60 68v2"),
+         treatment.group = paste(Treatment, microbiome.sample, sep = " x "),
+         tail.number = paste(tail.number, cage, sep = " x ")) %>%
+  calcTumorVol(., as.POSIXct("2022-05-12")) %>%
+  separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
+  mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
+         experiment = "mimic10") %>%
+  separate(tail.number, into = c("tail.number", "cage"), sep = " x ") %>%
+# mouse 3 cage 4 died and has incomplete dataset
+  filter(unique.mouse.id != "3 x 4_IgG_HONC-60 68v2")
+  
+```
+
+
+
 # Combine results
 
 ```{r}
@@ -205,11 +240,12 @@ mimic.cleaned <- mim1 %>%
   bind_rows(mim6) %>%
   bind_rows(mim7) %>%
   bind_rows(mim8) %>%
-  bind_rows(mim9)
+  bind_rows(mim9) %>%
+  bind_rows(mim10)
 ```
 
 # Save
 
 ```{r}
-write.csv(mimic.cleaned, "../data/2022-05-09_tumor-size_R-formatted.csv", row.names = F)
+write.csv(mimic.cleaned, "../data/2022-06-28_tumor-size_R-formatted.csv", row.names = F)
 ```
