Add mimic 11 and 12 to processing

--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -33,7 +33,7 @@ tsize.files <- list.files(file.path(paths$git, 'data','tumor-size'), pattern = "
 # tsize.files <- c(tsize.files[3:10], tsize.files[1])
 tsize.file.2 <- unlist(lapply(tsize.files, function(x) list.files(x, pattern = "_size")))
 
-tsize.raw <- lapply(1:10, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
+tsize.raw <- lapply(1:12, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
 
 inject.dates <- read_excel(file.path(paths$box, "data", "mimic_injection_dates.xlsx"))
 
@@ -207,7 +207,7 @@ mim4 <- mim4.fixdate %>%
 
 ```
 
-```{r AP mimic-10 cleanup}
+```{r AP mimic cleanup}
 mim10 <- tsize.raw[[10]] %>%
   drop_na(`tumor.number`) %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
@@ -224,7 +224,37 @@ mim10 <- tsize.raw[[10]] %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ") %>%
 # mouse 3 cage 4 died and has incomplete dataset
   filter(unique.mouse.id != "3 x 4_IgG_HONC-60 68v2")
-  
+
+mim11 <- tsize.raw[[11]] %>%
+  drop_na(tumor.number) %>%
+  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+         `date` = as.character(`date`),
+         Treatment = ifelse(cage %in% c(1,2), "Anti-PD1","IgG"), 
+         treatment.group = paste(Treatment, microbiome.sample, sep = " x "),
+         tail.number = paste(tail.number, cage, sep = " x ")) %>%
+  calcTumorVol(., as.POSIXct("2022-06-23")) %>%
+  separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
+  mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
+         experiment = "mimic11") %>%
+  separate(tail.number, into = c("tail.number", "cage"), sep = " x ") 
+
+mim12 <- tsize.raw[[12]] %>%
+   drop_na(tumor.number) %>%
+  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+         `date` = as.character(`date`),
+         Treatment = ifelse(cage %in% c(1,2), "Anti-PD1","IgG"),
+         microbiome.sample = ifelse(cage %in% c(1,3), "HONC60-85 v2", "HONC60-85 v1"),
+         treatment.group = paste(Treatment, microbiome.sample, sep = " x "),
+         tail.number = paste(tail.number, cage, sep = " x ")) %>%
+  calcTumorVol(., as.POSIXct("2022-06-30")) %>%
+  separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
+  mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
+         experiment = "mimic12") %>%
+  separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
+
+
 ```
 
 
@@ -241,11 +271,13 @@ mimic.cleaned <- mim1 %>%
   bind_rows(mim7) %>%
   bind_rows(mim8) %>%
   bind_rows(mim9) %>%
-  bind_rows(mim10)
+  bind_rows(mim10) %>%
+  bind_rows(mim11) %>%
+  bind_rows(mim12) 
 ```
 
 # Save
 
 ```{r}
-write.csv(mimic.cleaned, "../data/2022-06-28_tumor-size_R-formatted.csv", row.names = F)
+write.csv(mimic.cleaned, "../data/2022-07-25_tumor-size_R-formatted.csv", row.names = F)
 ```
