--- a/scripts/Combined-Mimic-Boxplot.Rmd
+++ b/scripts/Combined-Mimic-Boxplot.Rmd
@@ -15,83 +15,39 @@ source("00-paths.R")
 ```
 
 ```{r}
-processed.data <- read.csv("../data/2022-06-28_tumor-size_R-formatted.csv") %>%
-    mutate(treatment.group = paste(treatment, microbiome.sample, sep = " x "))
+processed.data <- read.csv("../data/2022-07-25_tumor-size_R-formatted.csv") %>%
+  mutate(treatment = fct_relevel(treatment, "IgG")) %>%
+  mutate(treatment.group = paste(treatment, microbiome.sample, sep = " x ")) %>%
+  mutate(treatment = as.character(treatment))
 
 ```
 
-```{r Organizing final timepoint by experiment}
+```{r}
 
-mim1.final <-
+max.final.processed <-
   processed.data %>%
-  filter(experiment == "mimic1") %>% 
-  filter(days.from.injection == 21) %>%
-  mutate(treatment = ifelse(treatment %in% c("Anti-PD-1"), "Anti-PD1", "IgG"),
-         microbiome.sample = ifelse(microbiome.sample %in% c("HONC-60-55.v3"), "HONC60-55 v3", "HONC60-55 v4"))
+  group_by(experiment) %>%
+  summarise(max(days.from.injection)) %>%
+  rename("days.from.injection" = "max(days.from.injection)")
 
-mim2.final <- 
+
+#mimic 2,4 have a couple different final days, need to add those in
+mim2.add <-
   processed.data %>%
   filter(experiment == "mimic2") %>%
-  filter(days.from.injection >= 20)
- 
-mim3.final <- 
-  processed.data %>%
-  filter(experiment == "mimic3") %>%
-  filter(days.from.injection == 21)
-
-mim4.final <- 
+  filter(days.from.injection == 20)
+mim4.add <-
   processed.data %>%
   filter(experiment == "mimic4") %>%
-  filter(days.from.injection >= 19)
+  filter(days.from.injection == 19)
 
-mim5.final <- 
-  processed.data %>%
-  filter(experiment == "mimic5") %>%
-  filter(days.from.injection == 22)
-
-mim6.final <- 
-  processed.data %>%
-  filter(experiment == "mimic6") %>%
-  filter(days.from.injection == 21)
-
-mim7.final <- 
-  processed.data %>%
-  filter(experiment == "mimic7") %>%
-  filter(days.from.injection == 21)
-
-mim8.final <- 
-  processed.data %>%
-  filter(experiment == "mimic8") %>% 
-  filter(days.from.injection == 21)
-
-mim9.final <- 
-  processed.data %>%
-  filter(experiment == "mimic9") %>%
-  filter(days.from.injection == 21)
-
-mim10.final <- 
-  processed.data %>%
-  filter(experiment == "mimic10") %>%
-  filter(days.from.injection == 21)
-
-```
-
-
-```{r full final processed}
-
-final.processed <-
-  bind_rows(mim1.final,
-            mim2.final,
-            mim3.final,
-            mim4.final,
-            mim5.final,
-            mim6.final,
-            mim7.final,
-            mim8.final,
-            mim9.final,
-            mim10.final) %>%
+final.processed <- 
+  semi_join(processed.data, 
+            max.final.processed,
+            by = "days.from.injection") %>%
+  bind_rows(mim2.add, mim4.add) %>%
   mutate(experiment = as.factor(experiment)) %>%
-  mutate(experiment = fct_relevel(experiment, "mimic10", after = 9)) %>%
+  mutate(experiment = fct_relevel(experiment, "mimic10","mimic11","mimic12", after = 9)) %>%
   mutate(treatment = if_else(grepl("PD1", treatment),
                              true = "Anti-PD1",
                              false = treatment)) %>%
@@ -105,38 +61,126 @@ final.processed <-
 final.processed %>%
   ggplot(aes(x = treatment.group, y = tumor.volume)) +
   geom_boxplot(fill = '#872657') +
-  facet_wrap(. ~ experiment, nrow = 2, scales = "free") +
+  facet_wrap(. ~ experiment, nrow = 3, scales = "free") +
   theme_bw() +
   ggtitle("Mimic Tumor Measurements for Final Timepoint") + 
   theme(axis.text.x = element_text(size = 5.5, angle = 45, hjust = .9)) +
   xlab("Treatment Group") +
   ylab("Tumor Volume")
 
-ggsave("../figures/mimic-combined-boxplot.png", width = 10, height = 7)
-
-
+ggsave("../figures/mimic-combined-boxplot.png", width = 10, height = 8)
 ```
 
-```{r filtered final output}
 
-HONC60.filter <-
+```{r mimic1,6,7 filtered final output}
+
+H55.filter <-
   final.processed %>%
   filter(experiment %in% c("mimic1","mimic6","mimic7")) %>%
-  mutate(patient = "HONC60-55",
-         Intervention = ifelse(microbiome.sample %in% c("HONC60-55 v3"), "Pre-BRB", "Post-BRB"))
+  mutate(patient = "HONC-60 55")
 
-HONC60.filter %>%
-  ggplot(aes(x = treatment, y = tumor.volume, fill = Intervention)) +
+H55.filter %>%
+  ggplot(aes(x = treatment, y = tumor.volume, fill = gavage)) +
   geom_boxplot() +
   facet_wrap(. ~ patient, scales = "free_y") +
   xlab("Treatment") +
   ylab("Tumor Volume") +
-  ggtitle("Mimic Tumor Volume by Intervention")
+  ggtitle("Mimic Tumor Volume by Intervention") +
+  theme_bw()
 
-ggsave("../figures/HONC-filtered-boxplot.png", width = 7, height = 8)
+ggsave("../figures/HONC55-filtered-boxplot.png", width = 7, height = 8)
 
 
 ```
+
+```{r mimic5 separate boxplot}
+
+H102.filter <-
+  final.processed %>%
+  filter(experiment == "mimic5") %>%
+  mutate(patient = "HONC-60 102")
+
+H102.filter %>%
+  ggplot(aes(x = treatment, y = tumor.volume, fill = gavage)) +
+  geom_boxplot() +
+  facet_wrap(. ~ patient, scales = "free_y") +
+  xlab("Treatment") +
+  ylab("Tumor Volume") +
+  ggtitle("Mimic5 Tumor Volume by Intervention") +
+  theme_bw()
+
+ggsave("../figures/HONC102-filtered-boxplot.png", width = 7, height = 8)
+
+```
+
+```{r mimic10 separate boxplot}
+
+H68.filter <-
+  final.processed %>%
+  filter(experiment == "mimic10") %>%
+  mutate(patient = "HONC-60 68")
+
+H68.filter %>%
+  ggplot(aes(x = treatment, y = tumor.volume, fill = gavage)) +
+  geom_boxplot() +
+  facet_wrap(. ~ patient, scales = "free_y") +
+  xlab("Treatment") +
+  ylab("Tumor Volume") +
+  ggtitle("Mimic10 Tumor Volume by Intervention") +
+  theme_bw()
+
+ggsave("../figures/HONC68-filtered-boxplot.png", width = 7, height = 8)
+
+```
+
+```{r mimic11 separate boxplot}
+
+H79.filter <-
+  final.processed %>%
+  filter(experiment == "mimic11") %>%
+  mutate(patient = "HONC-60 79",
+         gavage = if_else(grepl("v2", microbiome.sample),
+                          true = "Post-Placebo",
+                          false = "Post-BRB"))
+
+H79.filter %>%
+  ggplot(aes(x = treatment, y = tumor.volume, fill = gavage)) +
+  geom_boxplot() +
+  facet_wrap(. ~ patient, scales = "free_y") +
+  xlab("Treatment") +
+  ylab("Tumor Volume") +
+  ggtitle("Mimic11 Tumor Volume by Intervention") +
+  theme_bw()
+
+ggsave("../figures/HONC79-filtered-boxplot.png", width = 7, height = 8)
+
+```
+
+```{r mim12 individual boxplot}
+H85.filter <-
+  final.processed %>%
+  filter(experiment == "mimic12") %>%
+  mutate(patient = "HONC-60 85") %>%
+  mutate(treatment = fct_relevel(treatment, "IgG"))
+
+H85.filter %>%
+  ggplot(aes(x = treatment, y = tumor.volume, fill = gavage)) +
+  geom_boxplot() +
+  facet_wrap(. ~ patient, scales = "free_y") +
+  xlab("Treatment") +
+  ylab("Tumor Volume") +
+  ggtitle("Mimic12 Tumor Volume by Intervention") +
+  theme_bw()
+
+ggsave("../figures/HONC85-filtered-boxplot.png", width = 7, height = 8)
+
+
+```
+
+
+
+
+
 
 ```{r}
 
